[package]
name = "handler"
version = "0.1.0"
edition = "2021"

[lib]
name = "handler_lib"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
itertools = "0.10"
warp = "0.3"
async-trait = "0.1"
postgrest = "1.3"
chrono = "0.4.22"
dotenv = "0.15.0"

